# evrone-django-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: pr.yaml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .pylintrc.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject-uv.toml  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/actions/large-pr-check/: action.yaml
{{cookiecutter.project_name}}/.github/workflows/: pr.yaml
{{cookiecutter.project_name}}/app/: manage.py
{{cookiecutter.project_name}}/app/core/: serializers.py  views.py
{{cookiecutter.project_name}}/app/settings/: asgi.py  base.py  local.py  production.py  test.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/hooks/: post_gen_project.py
{{cookiecutter.project_name}}/scripts/: pr-max-diff-checker.sh  start-dev.sh  start.sh
